--- a/src/app/shared/components/ngswitchtab/ngswitchtab.component.html
+++ b/src/app/shared/components/ngswitchtab/ngswitchtab.component.html
@@ -1,4 +1,6 @@
- <ul class="nav nav-pills">
+<header class="bg-warning text-center p-1 text-capitalize mb-4"><strong><h1>Tab by usnig *ngSwitchTab</h1></strong></header>
+
+<ul class="nav nav-pills">
     <li 
     *ngFor="let array of skillsbox"
     (click)="onClick(array)"
